[package]
name = "rust-esp32-std-hello"
version = "0.1.0"
authors = ["ivmarkov"]
edition = "2018"

[dependencies]
esp-idf-sys = { git = "https://github.com/ivmarkov/esp-idf-sys.git" }
wasmi = { version = "0.7.0", default-features = false, features = ["core"] }
wasm3-sys = { git = "https://github.com/syntacticsugarglider/wasm3-sys", branch = "main" }

[lib]
crate-type = ["staticlib"]
